Fix skip links color id dark mode

--- a/scss/init/_colors.scss
+++ b/scss/init/_colors.scss
@@ -5,7 +5,7 @@
   --header-color: light-dark(#fff, #fafafa);
   --header-background-color: light-dark(#000, #121212);
 
-  --skiplinks-color: light-dark(#000, #f3f3f3);
+  --skiplinks-color: light-dark(#000, #121212);
   --skiplinks-focus-color: light-dark(#235da4, #fafafa);
   --skiplinks-focus-background-color: light-dark(#f3f3f3, #242424);
 
